# serializer version: 1
# name: test_create_and_write_to_sql_files_no_existing_generate
  dict({
    PosixPath('moduleA/main.py'): PosixPath('__generated/moduleA/main.sql'),
    PosixPath('moduleB/main.py'): PosixPath('__generated/moduleB/main.sql'),
  })
# ---
# name: test_edit_setup_script_with_exec_imm_sql
  '''
  EXECUTE IMMEDIATE FROM '/__generated/moduleB/dummy.sql';
  EXECUTE IMMEDIATE FROM '/__generated/dummy.sql';
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.1
  '''
  create application role app_public;
  EXECUTE IMMEDIATE FROM '/__generated/__generated.sql';
  
  '''
# ---
# name: test_generate_create_sql_ddl_statements_w_all_entries
  '''
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip')
  PACKAGES=('package_one==1.0.2', 'package_two')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='my_function_handler'
  EXECUTE AS OWNER;
  
  '''
# ---
# name: test_generate_create_sql_ddl_statements_w_select_entries
  '''
  CREATE OR REPLACE
  PROCEDURE my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  HANDLER='my_function_handler'
  EXECUTE AS OWNER;
  
  '''
# ---
# name: test_generate_grant_sql_ddl_statements
  '''
  GRANT USAGE ON PROCEDURE DATA.my_function
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_no_collected_functions
  ''
# ---
# name: test_process_with_collected_functions
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('package_one==1.0.2', 'package_two')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function
  TO APPLICATION ROLE APP_VIEWER;
  -- stagepath/data.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/data.py')
  PACKAGES=('package_one==1.0.2', 'package_two')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='data.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
